--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "firebase": "^11.10.0",
     "firebase-admin": "^13.4.0",
+    "ioredis": "^5.6.1",
+    "lottie-react": "^2.4.1",
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
